--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -212,10 +212,12 @@ jobs:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
     secrets: inherit
     if: |
-      needs.regenerate-snapshots-components.result == 'success' ||
-      needs.regenerate-snapshots-foundations.result == 'success' ||
-      needs.regenerate-snapshots-patternhub.result == 'success' ||
-      needs.regenerate-snapshots.result == 'success'
+      always() && (
+        needs.regenerate-snapshots-components.result == 'success' ||
+        needs.regenerate-snapshots-foundations.result == 'success' ||
+        needs.regenerate-snapshots-patternhub.result == 'success' ||
+        needs.regenerate-snapshots.result == 'success'
+      )
     needs:
       [
         regenerate-snapshots-components,
