--- a/__snapshots__/select/showcase/webkit/should-have-same-aria-snapshot/DBSelect-should-have-same-aria-snapshot.yaml
+++ b/__snapshots__/select/showcase/webkit/should-have-same-aria-snapshot/DBSelect-should-have-same-aria-snapshot.yaml
@@ -97,8 +97,8 @@
   - status
   - text: Label
   - combobox "Label":
-    - option [selected]
-    - option "Valid"
+    - option
+    - option "Valid" [selected]
     - option "Option 2"
   - text: Valid Valid message
   - status
