--- a/.github/workflows/02-e2e-showcases.yml
+++ b/.github/workflows/02-e2e-showcases.yml
@@ -74,10 +74,14 @@ jobs:
           name: db-ux-${{ inputs.showcase }}
           path: build-showcases/${{ inputs.showcase }}
 
-      # We test everything for patternhub and main branch
+      # We test everything for patternhub and main branch or in case of any aria-snapshot changes
       - name: 👩‍🔬 Test showcase with Playwright 🎭
         shell: bash
-        if: github.event.pull_request == null
+        if: |
+          needs.test-showcase-react.outputs.aria-snapshots-changed-to-main == 'true' ||
+          needs.test-showcase-angular.outputs.aria-snapshots-changed-to-main == 'true' ||
+          needs.test-showcase-vue.outputs.aria-snapshots-changed-to-main == 'true' ||
+          github.event.pull_request == null
         env:
           NEXT_PUBLIC_BASE_PATH: ${{ inputs.path }}
         run: |
