--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -191,12 +191,9 @@ jobs:
 
   regenerate-snapshots:
     if: |
-      needs.test-showcase-angular.outputs.aria-snapshots-changed == 'true' ||
-      needs.test-showcase-angular.outputs.visual-snapshots-changed == 'true' ||
-      needs.test-showcase-react.outputs.aria-snapshots-changed == 'true' ||
-      needs.test-showcase-react.outputs.visual-snapshots-changed == 'true' ||
-      needs.test-showcase-vue.outputs.aria-snapshots-changed == 'true' ||
-      needs.test-showcase-vue.outputs.visual-snapshots-changed == 'true'
+      needs.test-showcase-angular.result == 'failure' ||
+      needs.test-showcase-react.result == 'failure' ||
+      needs.test-showcase-vue.result == 'failure'
     uses: ./.github/workflows/02-e2e-regenerate.yml
     with:
       version: ${{ needs.get-playwright-version.outputs.version }}
@@ -212,7 +209,11 @@ jobs:
   commit-regenerated-snapshots:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
     secrets: inherit
-    if: always()
+    if: |
+      needs.regenerate-snapshots-components.result == 'success' ||
+      needs.regenerate-snapshots-foundations.result == 'success' ||
+      needs.regenerate-snapshots-patternhub.result == 'success' ||
+      needs.regenerate-snapshots.result == 'success'
     needs:
       [
         regenerate-snapshots-components,
