--- a/showcases/vue-showcase/package.json
+++ b/showcases/vue-showcase/package.json
@@ -8,6 +8,8 @@
     "build:01_vite": "vite build",
     "dev": "vite --open",
     "preview": "npx http-server ../../build-showcases",
+    "regenerate:aria-snapshots": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.aria-snapshots.ts --update-snapshots",
+    "regenerate:visual-snapshots": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.visual-snapshots.ts --update-snapshots",
     "start": "vite",
     "test:a11y-checker": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.a11y-checker.ts",
     "test:aria-snapshots": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.aria-snapshots.ts",
