fix(switch): resolve snapshot regeneration for component tests

--- a/.github/workflows/02-e2e.yml
+++ b/.github/workflows/02-e2e.yml
@@ -6,6 +6,10 @@ on:
       version:
         required: true
         type: string
+    outputs:
+      has-failures:
+        description: "Whether any of the component tests failed"
+        value: ${{ jobs.check-results.outputs.has-failures }}
 
 permissions:
   actions: write
@@ -72,3 +76,23 @@ jobs:
           name: ${{ matrix.framework }}-components-playwright-results-${{ matrix.shardIndex }}
           path: ./output/${{ steps.workingDirectory.outputs.dir }}/test-results
           retention-days: 30
+
+  check-results:
+    if: always()
+    needs: [playwright-ct]
+    runs-on: ubuntu-24.04
+    outputs:
+      has-failures: ${{ steps.check.outputs.has-failures }}
+    steps:
+      - name: Check for failures
+        id: check
+        run: |
+          # Check if any matrix job failed
+          results='${{ toJSON(needs.playwright-ct.result) }}'
+          if [[ "$results" == *"failure"* ]] || [[ "${{ needs.playwright-ct.result }}" == "failure" ]]; then
+            echo "has-failures=true" >> $GITHUB_OUTPUT
+            echo "Component tests have failures - will trigger snapshot regeneration"
+          else
+            echo "has-failures=false" >> $GITHUB_OUTPUT
+            echo "All component tests passed"
+          fi
