--- a/output/react/package.json
+++ b/output/react/package.json
@@ -12,19 +12,13 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/",
-    "src/"
+    "dist/"
   ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
-    },
-    "./src": {
-      "types": "./src/index.ts",
-      "default": "./src/index.ts"
-    },
-    "./src/*": "./src/*"
+    }
   },
   "scripts": {
     "build": "npm-run-all tsc",
