--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -217,11 +217,13 @@ jobs:
   commit-regenerated-snapshots:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
     secrets: inherit
-    if:
-      !cancelled() && ( needs.regenerate-snapshots-components.result == 'success' ||
-      needs.regenerate-snapshots-foundations.result == 'success' ||
-      needs.regenerate-snapshots-patternhub.result == 'success' ||
-      needs.regenerate-snapshots.result == 'success' )
+    if: |
+      ${{ !cancelled() &&
+        ( needs.regenerate-snapshots-components.result == 'success' ||
+        needs.regenerate-snapshots-foundations.result == 'success' ||
+        needs.regenerate-snapshots-patternhub.result == 'success' ||
+        needs.regenerate-snapshots.result == 'success' )
+      }}
     needs:
       [
         regenerate-snapshots-components,
