fix(ci/cd): added missing `!cancelled()` to condition (#4974)
* fix(ci/cd): added missing `!cancelled()` to condition

As a follow-up to https://github.com/db-ux-design-system/core-web/pull/4895, we need to add a necessary [`!cancelled()`](https://github.com/db-ux-design-system/core-web/pull/4963)

* fix: syntax error

* refactor: restructured

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -218,10 +218,12 @@ jobs:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
     secrets: inherit
     if: |
-      needs.regenerate-snapshots-components.result == 'success' ||
-      needs.regenerate-snapshots-foundations.result == 'success' ||
-      needs.regenerate-snapshots-patternhub.result == 'success' ||
-      needs.regenerate-snapshots.result == 'success'
+      ${{ !cancelled() &&
+        ( needs.regenerate-snapshots-components.result == 'success' ||
+        needs.regenerate-snapshots-foundations.result == 'success' ||
+        needs.regenerate-snapshots-patternhub.result == 'success' ||
+        needs.regenerate-snapshots.result == 'success' )
+      }}
     needs:
       [
         regenerate-snapshots-components,
