chore(switch): revert pipeline changes

--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -49,26 +49,12 @@ jobs:
           name: db-ux-components-build
           path: packages/components/build
 
-      - name: ⏬ Download showcases - React
+      - name: ⏬ Download showcases
         if: inputs.type == 'showcases'
         uses: actions/download-artifact@v5
         with:
           name: db-ux-react-showcase
           path: build-showcases/react-showcase
-
-      - name: ⏬ Download showcases - Angular
-        if: inputs.type == 'showcases'
-        uses: actions/download-artifact@v5
-        with:
-          name: db-ux-angular-showcase
-          path: build-showcases/angular-showcase
-
-      - name: ⏬ Download showcases - Vue
-        if: inputs.type == 'showcases'
-        uses: actions/download-artifact@v5
-        with:
-          name: db-ux-vue-showcase
-          path: build-showcases/vue-showcase
 
       - name: ⏬ Download patternhub
         if: inputs.type == 'patternhub'
@@ -94,10 +80,6 @@ jobs:
           else
             npm run regenerate:visual-snapshots --workspace=react-showcase
             npm run regenerate:aria-snapshots --workspace=react-showcase
-            npm run regenerate:visual-snapshots --workspace=angular-showcase
-            npm run regenerate:aria-snapshots --workspace=angular-showcase
-            npm run regenerate:visual-snapshots --workspace=vue-showcase
-            npm run regenerate:aria-snapshots --workspace=vue-showcase
           fi
 
       - name: 🆙 Upload components
