--- a/output/stencil/package.json
+++ b/output/stencil/package.json
@@ -12,7 +12,7 @@
   "module": "./dist/index.js",
   "exports": {
     ".": {
-      "types": "./dist/loader/types/index.d.ts",
+      "types": "./dist/loader/index.d.ts",
       "import": "./dist/loader/index.js"
     }
   },
