--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "dev": "npm run dev --workspace=scripts",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all --parallel lint:*",
+    "lint-packages": "tsx scripts/lint-packages.ts publint",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
     "lint:markdownlint": "markdownlint --config .config/.markdown-lint.yml **/*.md",
     "lint:package-json": "npx npm-package-json-lint packages/*/package.json",
-    "lint:publint": "tsx scripts/lint-packages.ts publint",
     "lint:stylelint": "stylelint **/*.{css,scss}",
-    "lint:types": "tsx scripts/lint-packages.ts types",
     "lint:xo": "xo",
     "prepare": "husky",
     "regenerate:screenshots": "npm run build && npm run build --workspace=react-showcase && docker-compose --file ./e2e/docker-compose.regenerate.yml up",
