--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,6 +9,7 @@
   },
   "author": "General technical components out of DB UX Design System (Version 3)",
   "license": "Apache-2.0",
+  "types": "false",
   "files": [
     "build"
   ],
