--- a/output/vue/package.json
+++ b/output/vue/package.json
@@ -37,7 +37,7 @@
     "test:components:ui": "playwright test --config playwright.config.ts --ui"
   },
   "devDependencies": {
-    "@playwright/experimental-ct-vue": "1.54.2",
+    "@playwright/experimental-ct-vue": "^1.54.2",
     "@vitejs/plugin-vue": "6.0.1",
     "replace-in-file": "8.3.0",
     "tsx": "4.20.5",
