--- a/output/react/package.json
+++ b/output/react/package.json
@@ -27,7 +27,7 @@
     "tsc": "tsc --project . --sourceMap false"
   },
   "devDependencies": {
-    "@playwright/experimental-ct-react": "^1.54.2",
+    "@playwright/experimental-ct-react": "1.55.0",
     "@types/react": "18.3.13",
     "react": "18.3.1",
     "react-dom": "18.3.1"
