--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "@guidepup/record": "0.1.0",
     "@guidepup/setup": "0.19.3",
     "@playwright/experimental-ct-core": "1.55.0",
-    "@playwright/experimental-ct-react": "^1.54.2",
-    "@playwright/experimental-ct-vue": "^1.54.2",
+    "@playwright/experimental-ct-react": "1.55.0",
+    "@playwright/experimental-ct-vue": "1.55.0",
     "@playwright/test": "1.55.0",
     "accessibility-checker": "4.0.9",
     "adm-zip": "0.5.16",
