--- a/showcases/angular-showcase/package.json
+++ b/showcases/angular-showcase/package.json
@@ -17,6 +17,9 @@
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
+    "@db-ux/db-theme": "^5.1.1",
+    "@db-ux/db-theme-fonts": "2.0.4",
+    "@db-ux/db-theme-icons": "3.1.1",
     "sa11y": "4.2.3"
   },
   "devDependencies": {
