--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "@angular/platform-server": "19.2.15",
     "@angular/router": "19.2.15",
     "@angular/ssr": "19.2.17",
-    "@arethetypeswrong/cli": "^0.18.2",
     "@axe-core/playwright": "4.10.2",
     "@babel/eslint-parser": "7.28.4",
     "@commitlint/cli": "19.8.1",
@@ -110,7 +109,7 @@
     "eslint": "9.36.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-config-xo": "0.49.0",
-    "eslint-plugin-package-json": "^0.54.0",
+    "eslint-plugin-package-json": "0.54.0",
     "eslint-plugin-prettier": "5.5.4",
     "find-versions": "6.0.0",
     "glob": "11.0.3",
@@ -120,7 +119,7 @@
     "lint-staged": "16.2.0",
     "markdownlint-cli": "0.45.0",
     "ng-packagr": "19.2.2",
-    "npm-package-json-lint": "^9.0.0",
+    "npm-package-json-lint": "9.0.0",
     "npm-run-all2": "8.0.4",
     "playwright": "1.55.0",
     "playwright-core": "1.55.0",
@@ -129,26 +128,25 @@
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-pkg": "0.21.2",
-    "publint": "^0.3.12",
+    "publint": "0.3.12",
     "replace-in-file": "8.3.0",
     "rimraf": "6.0.1",
     "rxjs": "7.8.2",
     "stylelint": "16.24.0",
-    "stylelint-config-standard-scss": "^16.0.0",
+    "stylelint-config-standard-scss": "16.0.0",
     "stylelint-use-logical": "2.1.2",
     "tslib": "2.8.1",
     "tsx": "4.20.5",
     "typescript": "5.8.3",
     "validate-branch-name": "1.3.2",
-    "vite": "6.3.5",
+    "vite": "7.1.7",
     "vitest": "3.2.4",
     "xo": "1.2.2",
     "zone.js": "0.15.1"
   },
   "overrides": {
     "brace-expansion": "2.0.2",
-    "cross-spawn": "7.0.6",
-    "vite": "6.3.5"
+    "cross-spawn": "7.0.6"
   },
   "validate-branch-name": {
     "pattern": "((copilot/)|(dependabot-)|^((test|feat|fix|chore|docs|refactor|style|ci|perf|alert|[0-9]+)\\-[a-zA-Z0-9\\-]+)$)",
