--- a/.github/workflows/01-build-outputs.yml
+++ b/.github/workflows/01-build-outputs.yml
@@ -54,7 +54,9 @@ jobs:
         run: npm run build-outputs
 
       - name: 📦 Validate Package Publishing
-        run: npm run lint-packages
+        run: |
+          npm run lint-packages
+          npm run lint-docs-file-references
 
       - name: ⏫ Upload outputs
         uses: actions/upload-artifact@v4
