--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config/schema.json",
-	"changelog": "@changesets/changelog-github",
+	"changelog": [
+		"@changesets/changelog-github",
+		{ "repo": "db-ux-design-system/core-web" }
+	],
 	"commit": true,
 	"fixed": [],
 	"linked": [
