--- a/.github/workflows/changesets-release-pr.yml
+++ b/.github/workflows/changesets-release-pr.yml
@@ -48,7 +48,7 @@ jobs:
       - name: 🆙 Publish
         if: steps.changesets.outputs.hasChangesets == 'false'
         run: |
-          VERSION=$(jq -r .version package.json)
+          VERSION=$(jq -r .version ./packages/foundations/package.json)
           TAG="v$VERSION"
           # Check if tag exists
           if git tag --list "$TAG" | grep -q "$TAG"; then
