--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@db-ux/core-web",
-  "version": "3.1.14",
+  "version": "0.0.0",
   "type": "module",
   "description": "DB UX Design System",
   "repository": {
@@ -51,6 +51,7 @@
     "build-showcases": "npm run build-showcases --workspace=scripts",
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
+    "changeset": "changeset",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
