--- a/__snapshots__/tooltip/showcase/chromium-highContrast/should-have-same-aria-snapshot/DBTooltip-should-have-same-aria-snapshot.yaml
+++ b/__snapshots__/tooltip/showcase/chromium-highContrast/should-have-same-aria-snapshot/DBTooltip-should-have-same-aria-snapshot.yaml
@@ -1,35 +1,35 @@
 - main:
   - heading "DBTooltip" [level=1]
   - link "Density"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
+  - button "Functional"
+  - button "(Default) Regular"
+  - button "Expressive"
   - link "Show Arrow"
-  - button "Tooltip"
-  - button "Tooltip"
+  - button "(Default) True"
+  - button "False"
   - link "Emphasis"
-  - button "Tooltip"
-  - button "Tooltip"
+  - button "(Default) Weak"
+  - button "Strong"
   - link "Placement"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
+  - button "bottom-start"
+  - button "(Default) bottom"
+  - button "bottom-end"
+  - button "left-start"
+  - button "left"
+  - button "left-end"
+  - button "right-start"
+  - button "right"
+  - button "right-end"
+  - button "top-start"
+  - button "top"
+  - button "top-end"
   - link "Width"
-  - button "Max width, lorem ipsum dolor sit amet, consetetur sadipscing"
-  - button "Max width, lorem ipsum dolor sit amet, consetetur sadipscing"
+  - button "(Default) Auto"
+  - button "Fixed"
   - link "Animation"
-  - button "Tooltip"
-  - button "Tooltip"
+  - button "(Default) True"
+  - button "False"
   - link "Delay"
-  - button "Tooltip"
-  - button "Tooltip"
-  - button "Tooltip"
+  - button "(Default) None"
+  - button "Slow"
+  - button "Fast"
