--- a/showcases/patternhub/package.json
+++ b/showcases/patternhub/package.json
@@ -23,6 +23,8 @@
     "test:e2e": "npx playwright test --config=./playwright.patternhub-config.ts"
   },
   "dependencies": {
+    "@db-ux/db-theme-fonts": "^2.0.4",
+    "@db-ux/db-theme-icons": "^3.1.2",
     "dompurify": "3.2.7",
     "highlight.js": "11.11.1",
     "next": "15.5.4",
