--- a/e2e/package.json
+++ b/e2e/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "type": "module",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/db-ux-design-system/core-web.git"
+  },
+  "license": "Apache-2.0",
   "private": true,
   "workspaces": [
     "showcases/*",
