--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config/schema.json",
 	"changelog": "@changesets/changelog-git",
-	"commit": true,
+	"commit": false,
 	"fixed": [
 		[
 			"@db-ux/core-foundations",
