--- a/.github/workflows/changesets-release-pr.yml
+++ b/.github/workflows/changesets-release-pr.yml
@@ -48,6 +48,7 @@ jobs:
           title: "chore(release): version packages"
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+          HUSKY: 0 # Disable Husky hooks in CI
 
       - name: 🆙 Publish
         if: steps.changesets.outputs.hasChangesets == 'false'
