--- a/output/vue/package.json
+++ b/output/vue/package.json
@@ -23,7 +23,8 @@
     }
   },
   "files": [
-    "dist/"
+    "dist/",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "npm-run-all build:*",
