--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -12,6 +12,7 @@
   "types": "./build/index.d.ts",
   "module": "./build/index.js",
   "files": [
+    "CHANGELOG.md",
     "assets",
     "build"
   ],
