chore: add version-bump for changesets

--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "build": "npm run build --workspace=scripts",
     "build-outputs": "npm run build-outputs --workspace=scripts",
     "build-showcases": "npm run build-showcases --workspace=scripts",
+    "changeset": "changeset",
+    "ci:version": "changeset version && tsx scripts/github/changesets/version-bump.ts",
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
-    "changeset": "changeset",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
