--- a/.github/workflows/changesets-release-pr.yml
+++ b/.github/workflows/changesets-release-pr.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           commit: "chore(release): version packages"
           title: "chore(release): version packages"
+          version: npm run ci:version
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
           HUSKY: 0 # Disable Husky hooks in CI
@@ -53,6 +54,6 @@ jobs:
       - name: 🆙 Publish
         if: steps.changesets.outputs.hasChangesets == 'false'
         run: |
-          npx --no tsx scripts/github/changesets-publish.ts
+          npx --no tsx scripts/github/publish.ts
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
