--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,8 @@ updates:
       timezone: "Europe/Berlin"
     pull-request-branch-name:
       separator: "-"
+    cooldown:
+      default-days: 7
 
   # Daily: Check minor and patch updates
   - package-ecosystem: "npm"
@@ -18,6 +20,8 @@ updates:
       interval: "daily"
       time: "23:00"
       timezone: "Europe/Berlin"
+    cooldown:
+      default-days: 3
     ignore:
       # angular: we update the major version manually
       - dependency-name: "@angular*"
@@ -60,7 +64,7 @@ updates:
           - "react"
           - "react-dom"
         update-types:
-          - "minor"  
+          - "minor"
       # Testing frameworks
       playwright:
         patterns:
@@ -75,7 +79,7 @@ updates:
       stylelint:
         patterns:
           - "stylelint*"
-          - "@double-great/stylelint-a11y"    
+          - "@double-great/stylelint-a11y"
       prettier:
         patterns:
           - "prettier*"
