--- a/.github/workflows/01-lint.yml
+++ b/.github/workflows/01-lint.yml
@@ -14,6 +14,7 @@ jobs:
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
 
+      # For now we keep this check in the codebase, even though that we already do the codespell check on git pre-commit hook. We might remove this check in the pipeline (even though that performance is not an issue, but it might be good for reducing external dependencies).
       - name: 📖 Check spelling
         uses: codespell-project/actions-codespell@v2
         with:
