chore: add codespell linting command to package.json and update lint-staged configuration

--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "changeset": "changeset",
     "ci:version": "changeset version && tsx scripts/github/changesets/version-bump.ts",
     "clean": "git clean -dfx --exclude=.env",
-    "codespell": "codespell --ignore-words .config/.codespellignorewords --config .config/.codespellrc",
     "codestyle": "prettier . --write",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
@@ -60,6 +59,7 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint-docs-file-references": "node scripts/check-docs.js",
     "lint-packages": "tsx scripts/lint-packages.ts publint",
+    "lint:codespell": "codespell --ignore-words .config/.codespellignorewords --config .config/.codespellrc",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
     "lint:markdownlint": "markdownlint --config .config/.markdown-lint.yml **/*.md",
     "lint:package-json": "npx npm-package-json-lint packages/*/package.json",
