--- a/output/stencil/package.json
+++ b/output/stencil/package.json
@@ -41,5 +41,9 @@
     "access": "public"
   },
   "web-types": "./dist/web-types.json",
-  "customElements": "dist/custom-elements.json"
+  "customElements": "dist/custom-elements.json",
+  "dependencies": {
+    "@db-ux/core-components": "3.1.15",
+    "@db-ux/core-foundations": "3.1.15"
+  }
 }
