--- a/output/vue/package.json
+++ b/output/vue/package.json
@@ -51,5 +51,9 @@
     "access": "public"
   },
   "sideEffects": false,
-  "source": "src/index.ts"
+  "source": "src/index.ts",
+  "dependencies": {
+    "@db-ux/core-components": "3.1.15",
+    "@db-ux/core-foundations": "3.1.15"
+  }
 }
