--- a/.github/workflows/changesets-release-pr.yml
+++ b/.github/workflows/changesets-release-pr.yml
@@ -54,6 +54,6 @@ jobs:
       - name: 🆙 Publish
         if: steps.changesets.outputs.hasChangesets == 'false'
         run: |
-          npx --no tsx scripts/github/publish.ts
+          npx --no tsx scripts/github/changesets/publish.ts
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
