--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 package-lock=true
 ignore-scripts=true
+# Dependencies saved to package.json will be configured with an exact version rather than using npm's default semver range operator. source: https://docs.npmjs.com/cli/v11/using-npm/config#save-exact
 save-exact=true
 engine-strict=true
