--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,5 @@ package-lock=true
 ignore-scripts=true
 # Dependencies saved to package.json will be configured with an exact version rather than using npm's default semver range operator. source: https://docs.npmjs.com/cli/v11/using-npm/config#save-exact
 save-exact=true
+# If set to true, then npm will stubbornly refuse to install (or even consider installing) any package that claims to not be compatible with the current Node.js version. source: https://docs.npmjs.com/cli/v11/using-npm/config#engine-strict
 engine-strict=true
