fix: permissions for release workflow
https://github.com/db-ux-design-system/core-web/actions/runs/18196907362

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,8 @@
 name: Test and publish to package registries after new GitHub release
 
 permissions:
-  contents: read
+  contents: write
+  actions: write
 
 on:
   release:
