Add major update type to Dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -109,9 +109,9 @@ updates:
           - "typescript"
           - "tsx"
           - "tslib"
-        # There is no entry for `major`, as these are configured to be ignored in the `ignore` section of this configuration file.
         update-types:
           - "minor"
+          - "major"
       # Commitlint
       commitlint:
         patterns:
