fix(dependabot): added explicit `patterns` definition for patch group
We are expecting this to fix the currently not being grouped named dependencies.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -51,6 +51,8 @@ updates:
       patch-dependencies:
         update-types:
           - "patch"
+        patterns:
+          - "*"
       # Major framework dependencies - group by framework for better review
       angular:
         patterns:
