--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -316,3 +316,16 @@ jobs:
     with:
       release: false
       preRelease: false
+
+  preview-url-pr-description:
+    runs-on: ubuntu-24.04 [Beta]
+    steps:
+      - name: 🔭 Add url for preview page
+        id: cleanup
+        uses: actions/github-script@v8
+        with:
+          script: |
+            const { default: previewUrlPrDescription } = await import('${{ github.workspace }}/scripts/github/preview-url-pr-description.js');
+            return await previewUrlPrDescription(github, context);
+    if: ${{ github.event.pull_request != null }}
+    needs: [deploy]
