--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -318,17 +318,6 @@ jobs:
       preRelease: false
 
   preview-url-pr-description:
-    runs-on: ubuntu-24.04  # Use Ubuntu 24.04 explicitly
-    permissions:
-      pull-requests: write
-      contents: write
-    steps:
-      - name: 🔭 Add url for preview page
-        id: cleanup
-        uses: actions/github-script@v8
-        with:
-          script: |
-            const { default: previewUrlPrDescription } = await import('${{ github.workspace }}/scripts/github/preview-url-pr-description.js');
-            return await previewUrlPrDescription(github, context);
     if: ${{ !cancelled() && github.event.pull_request != null }}
     needs: [deploy]
+    uses: ./.github/workflows/03-preview-url-pr-description.yml
