--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -136,7 +136,7 @@ jobs:
 
   build-showcase-patternhub:
     uses: ./.github/workflows/01-build-patternhub.yml
-    needs: [build-packages, get-publish-version]
+    needs: [build-packages, get-publish-version, repo-settings]
     with:
       baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
 
@@ -170,7 +170,7 @@ jobs:
 
   test-showcase-patternhub:
     uses: ./.github/workflows/02-e2e-patternhub.yml
-    needs: [build-showcase-patternhub, get-playwright-version]
+    needs: [build-showcase-patternhub, get-playwright-version, repo-settings]
     with:
       version: ${{ needs.get-playwright-version.outputs.version }}
       baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
